feat: 一个好朋友离职的感想,con

--- a/source/_posts/一个好朋友离职的感想.md
+++ b/source/_posts/一个好朋友离职的感想.md
@@ -3,3 +3,12 @@ title: 一个好朋友离职的感想
 date: 2019-01-10 23:21:02
 tags:
 ---
+
+公司前几周调整，云云要走了，刚开始还觉得可惜并且心慌，可惜是因为觉得云云挺好的，爱钻研有自律，心慌是因为觉得，自己太菜应该走的可能是我，有一丢丢侥幸。
+
+今天还和云云，haowen一起吃了顿饭，云云要去上海pdd了，薪资福利都还挺好的，唯一不足的就是base在上海，以后见面的可能性应该会比较小了。
+不过目前来看云云有个好去处还是很开心的，说明结束并不一定是件坏事，伴随而来的可能是更好的开始。嘻嘻，祝福～
+
+我们聊了很多，以后的发展规划啥的，于是我又觉得我是最没主见随波逐流的人，不知道自己在哪里也不知道自己要去哪里，诶，焦虑。觉得自己应该快速调整好心态，不能懒呀，先从公司的项目入手吧，自己每天做的东西要先搞懂呀。
+
+云云离职期间有个小插曲，公司给他配的电脑被偷了＝＝，可怕，不知道谁这么缺德，拿别人的东西。害的我每天到公司都要看看自己的电脑在不在。
